# Web-prison_management

./: .gitignore  README.md  docker-compose.yml  ers) complete Users CRUD with improved UI and RBAC  package-lock.json  package.json  requirements-dev.txt  requirements.txt  run-fullstack.ps1
backend/: .env.example  .evn  .gitignore  Dockerfile  README.md  TaoBang.sql  ai_engine.py  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  security.py  seed_logical_data.py
backend/.thunder-client/: thunderClient.json
backend/.thunder-client/collections/: prison-api.json
backend/.thunder-client/environments/: local.json
backend/alembic/: README.md
backend/alembic/versions/: 20260522_create_visit_requests.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  deps.py  logging.py  security.py  supabase.py
backend/app/db/: CreateTable.sql  session.py  supabase.py
backend/app/models/: prisoner.py
backend/app/schemas/: auth.py  common.py  (+8 more)
backend/docs/: api-contracts.json  fix-user-timestamps.sql  postman-collection.json
backend/prison_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/routers/: auth.py  core.py  economy.py  legal.py  schedule.py
backend/sql/: 01_Create_Database_and_Tables.sql  02_Create_AuditLog_and_Triggers.sql  03_Create_Database_Roles.sql  04_Create_Views_for_Viewer.sql  05_Grant_Permissions.sql  06_Reset_Data.sql  2026-06-07-add-audit-log.sql  README.md  SuaLoiTV.sql  TaoBang.sql  seed_logical_data.sql
backend/tests/: conftest.py  test_config.py  test_health.py
(+57 files in other folders)
